Try fix player panels not fitting in horizontal view issue #12

--- a/trackerStyle.css
+++ b/trackerStyle.css
@@ -390,7 +390,7 @@ trackerBlock button {
 }
 
 .panelContainer {
-  flex: 1 1 50px;
+  /*flex: 1 1 50px;*/
   width: 100%;
   height: 100%;
   min-height: 0;
@@ -398,6 +398,10 @@ trackerBlock button {
   align-items: center;
   justify-content: center;
   position: relative;
+}
+
+#trackerBlock[data-orientation="horizontal"] .panelContainer {
+  width: calc(100% / var(--numPanels, 7));
 }
 
 .playerPanel {
